--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,4 @@
 <%- include("partials/headerp"); -%>
-
-
-
 <!--    MAIN CAROUSEL   -->
 
    
@@ -93,7 +90,7 @@
           <h3 class="largetext-font">Headlines <span class="color-indication" style="margin-left: 12px;"><span class="upcoming" style="font-size: 12px; margin-right: 4px; color: #02ba21;">Upcoming</span>/<span class="passed" style="font-size: 12px; margin-left: 4px; color: #8f4757;">Passed</span></span></h3>
           <li> <a href="https://apjpu.webex.com/url3300/j.do?UID=592856312&RT=MiM0MQ%3D%3D&siteurl=apjpu&apiname=j.php&MTID=mb3faeef0e77aadb2db6be9306761a3d6&rnd=1877844306&ED=1455098072&needFilter=false" class="smalltext-font upcoming">On the occasion of Engineer's Day, Panjab University is Holding a conference on Mission @Atma Nirbhar Bharat: Engineers at the Forefront. Register yourself by clicking on this link.</a> 
           </li>
-          <li> <a href="http://bit.ly/PlacementPrep103" class="smalltext-font passed">Mr Ashish Chawla (Ex-Associate Director at KPMG) will conduct a Workshop on LinkedIn (How to use, create and network). Scheduled for August 24, 2021, from 12 PM onward</a> 
+          <li> <a href="http://bit.ly/PlacementPrep103" class="smalltext-font passed">Mr Kumar Gaurav (Ex-Associate Director at KPMG) will conduct a Workshop on LinkedIn (How to use, create and network). Scheduled for August 24, 2021, from 12 PM onward</a> 
           </li>
           <li><a href="https://www.youtube.com/watch?v=gE7AjLXAg1U&t=8s" class="smalltext-font passed" >The workshop by Mr Nimish Khurana was focused on providing the students with the strategies to crack FAANG interviews and discuss the experience of the interview in Google.</a> </li>
         </ul>  
