--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,7 +19,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/styles/css/main.css" />
-
+    <link rel="stylesheet" href="/styles/css/our-team.css" />
     <!-- FAVICON -->
 
     <link
@@ -95,8 +95,7 @@
     <title>UIET Alumni affair cell</title>
 
     <!--        NAVBAR     -->
-    <nav class="navbar navbar-expand-lg fixed-top py-2">
-      <div class="container" id="navu">
+    <nav class="navbar navbar-expand-lg fixed-top py-2" style="background-color: rgb(0,0,0);">
         <a href="/" class="navbar-brand">STUDENT TEAM FOR ALUMNI RELATIONS</a>
 
         <button
